Simplified some method using streamAPI. Changed logic of non-formatted text decryption.