@@ -1,9 +1,7 @@
 
-package com.javarush.krylov.Service;
+package com.javarush.krylov.src.Service;
 
-import java.io.BufferedWriter;
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
@@ -11,19 +9,13 @@ import java.nio.file.Paths;
 public class FileSaver {
 
     public void saveText(String message, String path) {
-        Path outputPath = Path.of(path);
-        if (isNotAbsolutePath(path)) {
-            outputPath = (outputPath.toAbsolutePath());
-        }
+        Path outputPath = Paths.get(path).toAbsolutePath();
+
         try (BufferedWriter writer = new BufferedWriter(new FileWriter(outputPath.toFile()))) {
             writer.write(message);
             System.out.println("Text saved");
         } catch (IOException e) {
             e.printStackTrace();
         }
-    }
-
-    private boolean isNotAbsolutePath(String path) {
-        return !Paths.get(path).isAbsolute();
     }
 }
